metadata/force-app/main/default/objects/CustomName_NGdkx__c/CustomName_NGdkx__c.object-meta.xml
<CustomObject>
    <description>Description_Wecjn</description>
    <label>CustomLabel_QXmZr</label>
    <nameField>
        <label>CustomLabel_QXmZr</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_QXmZrs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>