metadata/force-app/main/default/objects/CustomName_NGdkx__c/fields/CustomField_FSXGt__c.field-meta.xml
<CustomField>
    <fullName>CustomField_FSXGt__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjvcbd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>